# Python_Module_01-10

Python_Module_01/: README.md
Python_Module_01/ex0/: ft_garden_intro.py
Python_Module_01/ex1/: ft_garden_data.py
Python_Module_01/ex2/: ft_plant_growth.py
Python_Module_01/ex3/: ft_plant_factory.py
Python_Module_01/ex4/: ft_garden_security.py
Python_Module_01/ex5/: ft_plant_types.py
Python_Module_01/ex6/: ft_garden_analytics.py
Python_Module_02/: README.md
Python_Module_02/ex0/: ft_first_exception.py
Python_Module_02/ex1/: ft_different_errors.py
Python_Module_02/ex2/: ft_custom_errors.py
Python_Module_02/ex3/: ft_finally_block.py
Python_Module_02/ex4/: ft_raise_errors.py
Python_Module_02/ex5/: ft_garden_management.py
Python_Module_03/: README.md
Python_Module_03/data_quest_tools/: exercise_0_help.py
Python_Module_03/ex0/: ft_command_quest.py
Python_Module_03/ex1/: ft_score_analytics.py
Python_Module_03/ex2/: ft_coordinate_system.py
Python_Module_03/ex3/: ft_achievement_tracker.py
Python_Module_03/ex4/: ft_inventory_system.py
Python_Module_03/ex5/: ft_data_stream.py
Python_Module_03/ex6/: ft_analytics_dashboard.py
Python_Module_04/: README.md  sample_data.json
Python_Module_04/ex0/: ft_ancient_text.py
Python_Module_04/ex1/: ft_archive_creation.py
Python_Module_05/ex1/: data_stream.py
Python_Module_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Python_Module_07/: __init__.py
Python_Module_08/ex01/: loading.py  pyproject.toml
Python_Module_09/: data_generator  test
(+43 files in other folders)
